cargo-features = ["different-binary-name"]

[package]
name = "flipbook-converter-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
image = "0.24.8"

[[bin]]
name = "flipbook-converter-rs"
filename = "flipbook-converter"
